docs: merge run/test/debug design and implementation plan into one doc
Fold lathe-run-test-impl-plan.md into lathe-run-test-debug.md so the
design intent/rationale and the on-disk-artifact/module/build-slice
specification live in a single authoritative reference, matching what
design-index.md already described. Also updates the replay jar handling
per review: capture now excludes its own lathe-junit jar from the
recorded classPath at write time, so replay only appends the
lathe-test-runner jar instead of searching the class path and removing
an entry. This keeps "no replay re-capture" a structural guarantee
(the capture listener's class is simply absent from a replayed JVM's
class path) rather than one resting on a runtime system-property guard,
which was considered and rejected because its failure mode — silently
overwriting test-launch.json with a self-referential template — is far
more severe than a misconfigured flag elsewhere in the design.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>